添加商品搜索相关代码

--- a/mall-tiny-06/src/main/resources/application.yml
+++ b/mall-tiny-06/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒）
+  data:
+    elasticsearch:
+      repositories:
+        enabled: true
+      cluster-nodes: 127.0.0.1:9300
 
 mybatis:
   mapper-locations:
