--- a/mall-tiny-06/src/main/resources/application.yml
+++ b/mall-tiny-06/src/main/resources/application.yml
@@ -22,7 +22,8 @@ spring:
     elasticsearch:
       repositories:
         enabled: true
-      cluster-nodes: 127.0.0.1:9300
+      cluster-nodes: 127.0.0.1:9300 # es的连接地址及端口号
+      cluster-name: elasticsearch # es集群的名称
 
 mybatis:
   mapper-locations:
