--- a/mall-tiny-04/pom.xml
+++ b/mall-tiny-04/pom.xml
@@ -10,6 +10,10 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!--设置maven编码-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     </properties>
 
     <parent>
