--- a/mall-tiny-07/src/main/resources/application.yml
+++ b/mall-tiny-07/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: 8090
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.220.132:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
   redis:
-    host: localhost # Redis服务器地址
+    host: 192.168.220.132 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
@@ -22,10 +22,10 @@ spring:
     elasticsearch:
       repositories:
         enabled: true
-      cluster-nodes: 127.0.0.1:9300 # es的连接地址及端口号
+      cluster-nodes: 192.168.220.132:9300 # es的连接地址及端口号
       cluster-name: elasticsearch # es集群的名称
     mongodb:
-      host: localhost # mongodb的连接地址
+      host: 192.168.220.132 # mongodb的连接地址
       port: 27017 # mongodb的连接端口号
       database: mall-port # mongodb的连接的数据库
 
