--- a/mall-tiny-01/src/main/resources/application.yml
+++ b/mall-tiny-01/src/main/resources/application.yml
@@ -1,12 +1,6 @@
-server:
-  port: 8090
-
 spring:
-  datasource:
-    url: jdbc:mysql://192.168.220.132:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
-
+  profiles:
+    active: hjd22 #默认为开发环境
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
