--- a/mall-tiny-jenkins/pom.xml
+++ b/mall-tiny-jenkins/pom.xml
@@ -98,7 +98,8 @@
                 </executions>
                 <configuration>
                     <imageName>mall-tiny/${project.artifactId}:${project.version}</imageName>
-                    <dockerHost>http://192.168.6.132:2375</dockerHost>
+                    <!-- <dockerHost>http://192.168.6.132:2375</dockerHost> -->
+                    <dockerHost>http://192.168.10.128:2375</dockerHost>  
                     <baseImage>java:8</baseImage>
                     <entryPoint>["java", "-jar","/${project.build.finalName}.jar"]
                     </entryPoint>
