--- a/mall-tiny-jenkins/pom.xml
+++ b/mall-tiny-jenkins/pom.xml
@@ -111,6 +111,15 @@
                         </resource>
                     </resources>
                 </configuration>
+                 <!-- 解决HK2 service reification failed -->  
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>activation</artifactId>
+                        <version>1.1.1</version>
+                    </dependency>
+                </dependencies>
+                     
             </plugin>
         </plugins>
     </build>
